# AscendNPU-IR

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  README_zh.md  bishengir_compile_options_summary.md  cvpipeline_code_walkthrough_report.md  main.sh  planmemory_code_walkthrough_report.md  run_triton.sh
bishengir/lib/Template/: CMakeLists.txt
bishengir/lib/Template/include/: Utils.h
bishengir/lib/Template/include/CPUDebug/: CPUDebugUtils.h
bishengir/lib/Template/include/Cube/: Utils.h
bishengir/lib/Template/include/Cube/LocalMmad/: LocalMmadUtils.h
bishengir/lib/Template/include/DMA/: DMAUtils.h  L12UB.h  ND2NZ.h  NZ2ND.h  SET2D.h
bishengir/lib/Template/include/Debug/: Debug.h
bishengir/lib/Template/include/Fixpipe/: FixpipeUtils.h
bishengir/lib/Template/include/Host/SingleCube/: host_tiling.h
bishengir/lib/Template/include/Macro/: MacroUtils.h  buf_offset.h  common.h  coord.h  functional.h  params.h  swizzle.h  tiling.h
bishengir/lib/Template/include/Macro/block/: epilogue_block_store.h  mma_block.h  prologue_block.h
bishengir/lib/Template/include/Macro/core/: gemm_core.h
bishengir/lib/Template/include/Macro/operators/: iterator.h  mma.h
bishengir/lib/Template/include/Macro/operators/iterators/: gm_to_l1_iterator.h  (+4 more)
bishengir/lib/Template/include/Macro/tile/: load_a_tile.h  load_b_tile.h  load_bias_tile.h  load_scale_tile.h  mma_tile.h
bishengir/lib/Template/include/RegBase/: SIMTGatherUBToUB.h
bishengir/lib/Template/include/Synchronization/: SyncUtils.h
bishengir/lib/Template/include/Vector/: VecUtils.h
bishengir/lib/Template/include/Vector/Arange/: ArangeUtils.h
bishengir/lib/Template/include/Vector/Broadcast/: BrcUtils.h
bishengir/lib/Template/include/Vector/Cast/: CastUtils.h
bishengir/lib/Template/include/Vector/CmpSel/: CmpUtils.h  SelUtils.h
bishengir/lib/Template/include/Vector/Cumulative/: CumOpUtils.h  CumprodUtils.h  CumsumUtils.h
bishengir/lib/Template/include/Vector/Deinterleave/: DeinterleaveUtils.h
bishengir/lib/Template/include/Vector/Gather/: GatherMaskUtils.h  GatherUtils.h
bishengir/lib/Template/include/Vector/Histogram/: HistogramUtils.h
bishengir/lib/Template/include/Vector/Interleave/: InterleaveUtils.h
bishengir/lib/Template/include/Vector/MulExtended/: MulExtendedUtils.h
bishengir/lib/Template/include/Vector/Pow/: PowUtils.h
bishengir/lib/Template/include/Vector/Reduction/: ReduceARImpl.h  ReduceRAImpl.h  ReductionUtils.h
bishengir/lib/Template/include/Vector/Sort/: SortUtils.h
bishengir/lib/Template/include/Vector/Transpose/: TransposeUtils.h
bishengir/lib/Template/lib/: CMakeLists.txt
bishengir/lib/Template/lib/Cube/: GlobalMmad.cpp  LocalConv.cpp  LocalMmad.cpp  loadMXScale.cpp
bishengir/lib/Template/lib/DMA/: CMakeLists.txt
bishengir/lib/Template/lib/DMA/Cbuf/: CMakeLists.txt  Copy1D.cpp  Copy2D.cpp  Copy3D.cpp  cbuf.cpp  nd2nz.cpp  nz2nd.cpp  set2d.cpp
bishengir/lib/Template/lib/DMA/Ubuf/: Copy1D.cpp  Copy2D.cpp  Copy3D.cpp
bishengir/lib/Template/lib/Debug/: CMakeLists.txt  Debug.cpp
bishengir/lib/Template/lib/Fixpipe/: Fixpipe.cpp
bishengir/lib/Template/lib/Host/: CMakeLists.txt
bishengir/lib/Template/lib/Host/SingleCube/: CMakeLists.txt  host_tiling_func.cpp
bishengir/lib/Template/lib/RegBase/: CMakeLists.txt
bishengir/lib/Template/lib/RegBase/Cube/: CMakeLists.txt  Copy1D.cpp  Fixpipe.cpp  GlobalMmad.cpp  LocalMmad.cpp  LocalMmadMx.cpp  l12ub.cpp  loadMXScale.cpp  nd2nz.cpp  set2d.cpp
bishengir/lib/Template/lib/RegBase/Debug/: CMakeLists.txt  Debug.cpp
bishengir/lib/Template/lib/RegBase/Vector/: Atan.cpp  CMakeLists.txt  Copy1D.cpp  Copy2D.cpp  Copy3D.cpp  Cos.cpp  Cumminmax.cpp  Cumprod.cpp  Cumsum.cpp  CumsumSimtSklansky.cpp  DivMagic.cpp  DivRn.cpp  Erf.cpp  Flip1D.cpp  FloatAsInt.cpp  Ilogb.cpp  Ldexp.cpp  Log1p.cpp  Log2.cpp  NumChecks.cpp  Pow.cpp  Recip.cpp  ReductionWithIndex.cpp  Relu.cpp  Round.cpp  Rsqrt.cpp  SIMTGatherOutToUB.cpp  SIMTGatherUBToUB.cpp  SIMTHistogram1D.cpp  SIMTIndexPut.cpp  SIMTIndexSelect.cpp  SIMTIndirectAtomic.cpp  SIMTIndirectAtomicBlock.cpp  SIMTIndirectAtomicSoftAccel.cpp  SIMTIndirectLoad.cpp  SIMTIndirectStore.cpp  SIMTLoadStore.cpp  SIMTScatterUBToOut.cpp  SIMTStrideLoad.cpp  SIMTStrideStore.cpp  (+9 more)
bishengir/lib/Template/lib/Shmem/: CMakeLists.txt  Shmem.cpp
bishengir/lib/Template/lib/Synchronization/: CMakeLists.txt
bishengir/lib/Template/lib/Synchronization/SyncBlockLock/: SyncBlockLock.cpp
bishengir/lib/Template/lib/Vector/: CMakeLists.txt  Utils.cpp
bishengir/lib/Template/lib/Vector/Arange/: Arange1D.cpp  Arange2D.cpp  Arange3D.cpp  CMakeLists.txt
bishengir/lib/Template/lib/Vector/Broadcast/: BrcFirstAxis.cpp  BrcLastAxis.cpp  BrcMidAxis.cpp  BrcSinglePoint.cpp
bishengir/lib/Template/lib/Vector/Cast/: Cast1D.cpp  Cast2D.cpp
bishengir/lib/Template/lib/Vector/CmpSel/: Cmp1D.cpp  Sel1D.cpp
bishengir/lib/Template/lib/Vector/Cumulative/: Cumprod.cpp  Cumsum.cpp
bishengir/lib/Template/lib/Vector/Deinterleave/: Deinterleave1D.cpp  Deinterleave2D.cpp
bishengir/lib/Template/lib/Vector/Elementwise/: EltWise1D.cpp  EltWise2D.cpp  EltWise3D.cpp
bishengir/lib/Template/lib/Vector/Gather/: Flip1D.cpp  Gather1D.cpp  GatherMask1D.cpp
bishengir/lib/Template/lib/Vector/Histogram/: Histogram1D.cpp
bishengir/lib/Template/lib/Vector/Interleave/: Interleave1D.cpp
bishengir/lib/Template/lib/Vector/MulExtended/: MulExtended1D.cpp
bishengir/lib/Template/lib/Vector/Pow/: Pow1D.cpp
bishengir/lib/Template/lib/Vector/Reduction/: ReduceAAR.cpp  ReduceAR.cpp  ReduceARA.cpp  ReduceAR_With_Index.cpp  ReduceR.cpp  ReduceRA.cpp  ReduceRA0A1.cpp  ReduceRA_With_Index.cpp  ReduceR_With_Index.cpp
bishengir/lib/Template/lib/Vector/Sort/: CMakeLists.txt  Sort1D.cpp
bishengir/lib/Template/lib/Vector/Transpose/: Transpose2D.cpp  Transpose3D.cpp
bishengir/python/wheel/: README.md  pyproject.toml  setup.py
bishengir/python/wheel/ascendnpuir/: __init__.py  _placeholder.c  compiler.py
bishengir/tools/bishengir-cvpipeline-suffix-compile/: CMakeLists.txt  bishengir-cvpipeline-suffix-compile.cpp
(+2314 files in other folders)
