# Copyright (c) Huawei Technologies Co., Ltd. 2025. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0", "wheel", "auditwheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascendnpu-ir"
version = "1.1.0"
description = "AscendNPU IR Compiler - Python bindings for bishengir-compile"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Huawei Technologies Co., Ltd.", email = "huchengbei@gmail.com"}
]
keywords = ["compiler", "npu", "ascend", "mlir", "ir"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://gitcode.com/Ascend/AscendNPU-IR"
Documentation = "https://ascendnpu-ir.gitcode.com"
Repository = "https://gitcode.com/Ascend/AscendNPU-IR"
Bug-Tracker = "https://gitcode.com/AscendAscendNPU-IR/issues"

[tool.setuptools]
packages = ["ascendnpuir"]
zip-safe = false

[tool.setuptools.package-data]
ascendnpuir = ["bin/**/*", "lib/**/*", "*.bc"]
