add_subdirectory(Broadcast)
add_subdirectory(Cast)
add_subdirectory(CmpSel)
add_subdirectory(Elementwise)
add_subdirectory(Reduction)
add_subdirectory(Transpose)
add_subdirectory(Arange)
add_subdirectory(Interleave)
add_subdirectory(Deinterleave)
add_subdirectory(Gather)
add_subdirectory(MulExtended)
add_subdirectory(Pow)
add_subdirectory(Cumulative)
add_subdirectory(Sort)
compile_cpp_to_bc("aiv" "Ascend910B")
